# vizhi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: code-explained.md  project-explained.md  tech-stack.md
my_reports/: session_8517de20-867b-49b2-a796-45326f3d52c9_20260521T122037Z.json
tmp_reports/: session_f794e873-2908-4744-9338-7b62cfd22a8e_20260521T120939Z.json
vizhi/: __init__.py  classifier.py  cli.py  hook_receiver.py  installer.py  parser.py  reporter.py  session_viewer.py  watcher.py
vizhi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vizhi_reports/: session_28f862b0-db46-4557-8dc7-177c67fa38ad_20260521T120700Z.json  session_45fa64f4-a891-41b8-8a0d-bc4dc73c718c_20260521T120800Z.json  session_6619a946-8596-4322-906a-bf9ee79aaf91_20260521T121900Z.json  session_72672af3-c11e-4ddc-895b-b2c12818fc83_20260521T120710Z.json  session_a333b83e-a991-41c5-94b5-07eb52d555f9_20260521T120634Z.json
